@@ -1,1 +1,1 @@
-__version__ = '1.1.1.dev2'
+__version__ = '1.1.1.dev3'
